fix examples site on mobile

--- a/examples/src/components/Header.module.css
+++ b/examples/src/components/Header.module.css
@@ -4,7 +4,7 @@
   padding: 0.5em;
   display: flex;
   align-items: center;
-  height: 2em;
+  height: 2.5em;
 }
 
 #header h1 {
@@ -20,4 +20,23 @@
 
 #header img {
   vertical-align: middle;
+}
+
+#header #menu-button {
+  display: none;
+  outline: none;
+
+  padding: 0 0.25em;
+  background: transparent;
+  border: 1px solid #FFFFFF;
+}
+
+@media (max-width: 700px) {
+  #header .header-link {
+    display: none;
+  }
+
+  #header #menu-button {
+    display: inline;
+  }
 }
