--- a/examples/src/components/Layout.module.css
+++ b/examples/src/components/Layout.module.css
@@ -17,6 +17,7 @@ button {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  max-width: 100%;
 }
 
 #main #content-container {
